syntax = "proto3";

import "google/protobuf/empty.proto";


option csharp_namespace = "TicketingAppBackEnd.Protos";


service MailService {
  rpc SendMail(mail) returns (google.protobuf.Empty);
}

message mail{
  string sender = 1;
  string target = 2;
  string subject = 3;
  string body = 4;
}